@@ -1,3 +1,7 @@
+2003-05-19  Andrew Lunn  <andrew.lunn@ascom.ch>
+
+	* src/sntp.c: Added support for IPv6 multicast NTP packets.
+
 2003-04-09  Michael Checky  <Michael_Checky@Thermoking.com>
 
 	* src/sntp.c: In function sntp_fn() changed 'version' to
